# piece-of-art

./: .gitmodules  Dockerfile  README.md  docker-compose.yml  endpoints.yaml
backend/: .gitignore  CMakeLists.txt  Dockerfile
backend/adaptive-radix-tree/: CMakeLists.txt
backend/adaptive-radix-tree/include/art/: art.hpp  node_48.hpp
backend/algorithm/: CMakeLists.txt  Makefile
backend/algorithm/src/: algorithm.cpp  algorithm.h  main.cpp
backend/data/: postcode.json
backend/include/: craftsman.h  my_resource.h
backend/src/: algorithm.cpp  crow_test.cpp  main_test.cpp
include/: craftsman.h  my_resource.h
reactFrontend/: Dockerfile  index.html  package-lock.json  package.json
reactFrontend/nginx/: nginx.conf
reactFrontend/src/: main.tsx
reactFrontend/src/components/: Craftman.tsx  HeaderBar.tsx  HiddenNavBar.tsx  NavBar.tsx  Page.tsx
reactFrontend/src/css/: NavBar.css  Root.css  index.css
reactFrontend/src/functions/: loadMoreCraftsmen.ts  openApiWrapper.ts  searchCraftsmenAction.ts  searchPostcodesAction.ts  updateCraftsmenAction.tsx
reactFrontend/src/routes/: ErrorPage.tsx  RankedCraftsmenPage.tsx  Root.tsx  SearchCraftsmenByPostcodePage.tsx  SearchCraftsmenPage.tsx  SearchPage.tsx  SelectCraftsmenById.tsx  SelectCraftsmenForUpdatePage.tsx  UpdateCraftsmenPage.tsx
reactFrontend/src/services/openapi/models/: Craftsman.ts
reactFrontend/src/services/openapi/services/: DefaultService.ts
src/: main_test.cpp
